# premoapi

./: .env.example  .gitignore  DNS_RECORDS_FOR_RESEND.md  README.md  SESSION_SUMMARY.md  add-action-and-save.js  add-action-keyboard.js  add-action-simple.js  add-action-tab.js  add-action-v2.js  agree-terms.js  analyze-and-click-create.js  analyze-page.js  change-trigger-outlook.js  check-advanced-params.js  check-and-save-flow.js  check-and-signin.js  check-final-state.js  check-flow-status.js  check-pa-flow.js  check-pa-status.js  check-save-status.js  click-agree.js  click-automated-flow.js  click-change-connection.js  click-checkboxes.js  click-compose-action.js  click-create-btn.js  click-create-coord.js  click-create-flow.js  click-create-simple.js  click-create.js  click-data-op-compose.js  click-dialog-create.js  click-fui-checkbox.js  click-gmail-trigger.js  click-insert-515-232.js  click-insert-action.js  click-signin.js  close-panel-and-save.js  (+138 more)
.serena/: project.yml
docs/: POWER_AUTOMATE_EMAIL_FLOW.md
email-relay/: README_OAUTH.md  chat_server.py  check-n8n.py  check_n8n_logs.py  dashboard.html  fix_docker.py  fix_n8n_permissions.py  full_compatibility_check.py  gemini_cli.py  google-apps-script.js  google_login.sh  google_oauth_setup.py  monitor.js  n8n_activate_workflows.py  (+23 more)
email-relay/google-workspace-mcp/: .gitignore  README.md  claude-code-config.json  pyproject.toml
email-relay/google-workspace-mcp/src/google_workspace_mcp/: __init__.py  auth.py  server.py
email-relay/google-workspace-mcp/src/google_workspace_mcp/tools/: __init__.py  calendar.py  drive.py  gmail.py  sheets.py
(+88 files in other folders)
